--- a/src/WebApi/wwwroot/js/app/components/historyDetailView.html
+++ b/src/WebApi/wwwroot/js/app/components/historyDetailView.html
@@ -1,12 +1,9 @@
 ﻿
-<ul data-bind="foreach: details">
-    <li>
+
         <!--<span data-bind="text: $data"></span>-->
-        <span data-bind="text: url"></span>
-        <span data-bind="text: searchString"></span>
-        <span data-bind="text: searchTime"></span>
+        <span data-bind="text: link"></span>
+        <span data-bind="text: string"></span>
+        <span data-bind="text: time"></span>
         <!--<span data-bind="text: postBody"></span>
         <span data-bind="text: rank"></span>-->
-        hello this page
-    </li>
-</ul>
+        hello this page is history detail view
