search see detail ma postID bi hu co gi chi lam xong thi link cai url vao nhe

--- a/src/WebApi/wwwroot/js/app/components/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/searchView.html
@@ -2,7 +2,8 @@
 <button data-bind="click: clickSearch">Search</button>
 <ul data-bind="foreach: sList">
     <li>
-       <span data-bind="text: id"></span>
+        <span data-bind="text: id"></span>
+        <span> <a href="#" data-bind="click: $parent.getDetails">See Details</a></span>
        <span data-bind="text: postBody"></span>
        <span data-bind="text: rank"></span>
      </li>
