--- a/src/WebApi/wwwroot/js/app/components/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/searchView.html
@@ -12,7 +12,7 @@
 </ul>
 <div data-bind="foreach: postDetail">
 
-    <p data-bind="component:{name:'search-detail', params:{pLink: url, tit: title, body: postBody, ans: answer}}"></p>
+    <p data-bind="component:{name:'search-detail', params:{pLink: url, tit: title, body: postBody, ans: answers}}"></p>
 
 </div>
 
