--- a/src/WebApi/wwwroot/js/app/components/historyListView.html
+++ b/src/WebApi/wwwroot/js/app/components/historyListView.html
@@ -1,26 +1,27 @@
 ﻿<table class="table table-striped">
     <thead>
     <tr>
-        <th>S.No</th>
+  
         <th>total</th>
         <th>next</th>
         <th>previous</th>
        </tr>
     </thead>
-    <tbody data-bind="foreach: histories">
+    <tbody >
     <tr>
-        <td data-bind="text:$index"></td>
-        <td data-bind="text:total"></td>
-        <td> <a data-bind="attr :{ href: next}">Next</a></td>
-        <td> <a href="#" data-bind="click: $parent.getNext">Next</a></td>
-        <td> <a data-bind="attr :{ href: previous}">Previous</a></td>
+     
+        <td></td>
+        <td> <button data-bind="enable: canNext(),click: showNext">Next</button></td>
+        <td> <button data-bind="enable: canPrev(), click: showPrev">Previous</button></td>
     </tr>
     </tbody>
 </table>
 <table>
+    
+
     <thead>
     <tr>
-        <th>S.No</th>
+    
         <th>Url</th>
         <th>searchString</th>
         <th>searchTime</th>
@@ -28,7 +29,7 @@
     </thead>
     <tbody data-bind="foreach: hdata">
     <tr>
-        <td data-bind="text:$index"></td>
+    
         <td> <a href="#" data-bind="click: $parent.getDetails">See Details</a></td>
         <td data-bind="text:searchString"></td>
         <td data-bind="text:searchTime"></td>
@@ -46,4 +47,5 @@
     
 </div>
 <post-detail></post-detail>
+
 
