show detail page

--- a/src/WebApi/wwwroot/js/app/components/historyDetailView.html
+++ b/src/WebApi/wwwroot/js/app/components/historyDetailView.html
@@ -1,9 +1,13 @@
 ﻿
 
-        <!--<span data-bind="text: $data"></span>-->
+        <!--<span data-bind="text: @data"></span>-->
         <span data-bind="text: link"></span>
         <span data-bind="text: string"></span>
         <span data-bind="text: time"></span>
+        <!--<span data-bind="foreach: histo"></span>-->
         <!--<span data-bind="text: postBody"></span>
         <span data-bind="text: rank"></span>-->
         
+<!--<ul data-bind="foreach: histo">
+    <li data-bind="text: @data"></li>
+</ul>-->
