--- a/src/WebApi/wwwroot/js/app/components/historyListView.html
+++ b/src/WebApi/wwwroot/js/app/components/historyListView.html
@@ -41,11 +41,17 @@
 <script>console.log(url)</script>
 <p> hello from this page</p>
 
-<div data-bind="foreach: historyDetail">
+<!--<div data-bind="foreach: historyDetail">
    
     <p data-bind="component:{name:'post-detail', params:{link: url, string: searchString, time: searchTime}}"></p>
     
 </div>
-<post-detail></post-detail>
+<post-detail></post-detail>-->
 
 
+    <!--<ul class="list-group" data-bind="foreach: hdata">
+        <li class="list-group-item" data-bind="click: $parent.selectHistory">
+            <span data-bind="text: url"></span>
+            <span data-bind="component:{name:'post-detail', params:{histo: histo}}"></span>
+        </li>
+    </ul>-->
