show search detail in another page and history detail with component binding

--- a/src/WebApi/wwwroot/js/app/components/historyListView.html
+++ b/src/WebApi/wwwroot/js/app/components/historyListView.html
@@ -41,12 +41,12 @@
 <script>console.log(url)</script>
 <p> hello from this page</p>
 
-<!--<div data-bind="foreach: historyDetail">
+<div data-bind="foreach: historyDetail">
    
     <p data-bind="component:{name:'post-detail', params:{link: url, string: searchString, time: searchTime}}"></p>
     
 </div>
-<post-detail></post-detail>-->
+<post-detail></post-detail>
 
 
     <!--<ul class="list-group" data-bind="foreach: hdata">
