--- a/src/WebApi/wwwroot/js/app/components/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/searchView.html
@@ -10,10 +10,10 @@
     
 
 </ul>
-<div data-bind="foreach: postDetail">
+<!--<div data-bind="foreach: postDetail">
 
     <p data-bind="component:{name:'search-detail', params:{pLink: url, tit: title, body: postBody, ans: answers}}"></p>
 
 </div>
 
-<search-detail></search-detail>
+<search-detail></search-detail>-->
