--- a/src/WebApi/wwwroot/js/app/components/search/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/search/searchView.html
@@ -12,10 +12,14 @@
             <div class="col-sm-2"></div>
             <div class="col-sm-6">
                 <div class="input-group">
+                     
                     <input class="form-control"
                            id="system-search"
                            name="search"
-                           placeholder="Search for" required>
+                           type="text"
+                           placeholder="Search for" required
+                           data-bind="value: searchfor, valueUpdate: 'afterkeydown'"/>                
+
                     <span class="input-group-btn">
                         <button type="submit"
                                 class="btn btn-default"
@@ -30,7 +34,7 @@
             <div class="col-sm-2">                       
                <select class="form-control">
                   <option value="relevance">Sort: Relevance</option>
-                  <option value="two">Sort: Best Match</option>
+                  <option value="bestmatch">Sort: Best Match</option>
                </select>
             </div>
                 </div>
@@ -44,48 +48,52 @@
         <table class="table table-list-search" data-bind="visible:posts().length">         
             <thead>
                 <tr>
-                    <th colspan="3">Search results: <span data-bind="text: posts().length"></span></th>
+                    <th colspan="3">
+                        Search results: <span data-bind="text: totalItemCount()"></span> 
+                        <!-- Pagination -->
+                        <div class="pagination" style="float:right">
+                            <span data-bind="style:  { display: isFirstPage() == true ? 'none' : ''  }">
+                                <a href="#" data-bind="click: function() { previousPage() }"><< Previous</a>
+                            </span>
+                            <span data-bind="foreach: allPages()">
+                              <span data-bind="">
+                                <a href="#" data-bind="text: $index() + 1 , 
+                                                       click: function() { $parent.moveToPage($index() + 1) }, 
+                                                       css: { 'filterItemSelect': $parent.isCurrentPage() == $index() + 1 }">
+                                </a>
+                              </span>                                                       
+                            </span>
+                            <span data-bind="style: { display: isLastPage() == true ? 'none' : '' }">
+                                <a href="#" data-bind="click: function() { nextPage() }">Next >></a>
+                            </span>
+                        </div>
+                    </th>
                 </tr>
-                <tr>
-                    <th>Post ID</th>
-                    <th>Post Body</th>
+                <tr>             
+                    <th>Mark</th>    
+                    <th>Title</th>
                     <th>Rank</th>
                 </tr>
             </thead>
             <tbody data-bind="foreach: posts">
                 <tr>
-                    <td data-bind="text: id">Post ID</td>
-                    <td data-bind="html: postBody">Post Body</td>
-                    <td data-bind="text: rank">>Rank</td>
+                    <!-- <td data-bind="text: id">Post ID</td>      --> 
+                    <td><input id="cbmark" type="checkbox" data-bind="checkedValue: id, checked: status === 1, click: function() { $parent.markPost(id) }"></td>                  
+                    <td>
+                        <a href="#" data-bind="text: title"></a> <br>
+                        <span class = "label label-info" data-bind="text: tag"></span>
+                        <!--<input type="text" data-bind="value: tagName" data-role="tagsinput" />-->
+                    </td>              
+                    <td data-bind="text: rank">Rank</td>
                 </tr>
-
             </tbody>
         </table>
     </div>
-   <!-- Pagination 
-    <div id="testBinding">
-        <div data-bind="pageSizeControl: observableArray, pageSize: pageSize"></div>
-        <table>
-            <thead>
-                <tr>
-                    <th>$index</th>
-                    <th>Key</th>
-                    <th>Value</th>
-                    <th>Page Size</th>
-                </tr>
-            </thead>
-            <tbody data-bind="pagedForeach: observableArray">
-                <tr>
-                    <td data-bind="text: $index"></td>
-                    <td data-bind="text: key"></td>
-                    <td data-bind="text: value"></td>
-                    <td class="parentPageSize" data-bind="text: $parent.pageSize"></td>
-                </tr>
-            </tbody>
-        </table>
-        <div data-bind="pageLinks: observableArray"></div>
-    </div> -->
+   
 </div>
 
     <!-- data-bind="click: $parent.selectAnnotation, css: {active: $parent.isSelected($data)}"
+
+        css: { 'background-color' :  $parent.isCurrentPage() == $index() +  1 ? 'pink' : 'yellow' }
         -->
+
