--- a/src/WebApi/wwwroot/js/app/components/annotation/annotationListView.html
+++ b/src/WebApi/wwwroot/js/app/components/annotation/annotationListView.html
@@ -1,10 +1,29 @@
-﻿<div class="col-sm-6">
-    <ul class="list-group" data-bind="foreach: annotations">
-        <li class="list-group-item" data-bind="click: $parent.selectAnnotation, css: {active: $parent.isSelected($data)}">
-          
-                <span data-bind="text: postId">PostId</span> 
-        </li>
-    </ul>
-</div>
+﻿
 
-<annotation-details></annotation-details>
+    <div class="col-sm-6">
+        <ul class="list-group" data-bind="foreach: annotations">
+            <li class="list-group-item" data-bind="click: $parent.selectAnnotation, css: {active: $parent.isSelected($data)}">
+
+                <span data-bind="text: postId">PostId</span>
+            </li>
+        </ul>
+    </div>
+    <annotation-details></annotation-details>
+<table class="table table-striped">
+    <thead>
+        <tr>
+
+            <th>total</th>
+            <th>next</th>
+            <th>previous</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+
+            <td data-bind="text: total"></td>
+            <td> <button data-bind="click: showNext">Next</button></td>
+            <td> <button data-bind="enable: canPrev(), click: showPrev">Previous</button></td>
+        </tr>
+    </tbody>
+</table>
