--- a/src/WebApi/wwwroot/js/app/components/search/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/search/searchView.html
@@ -104,6 +104,7 @@
                         </span>
                     </div>
                     </div>
+                    </div>
               
 
  
