--- a/src/WebApi/wwwroot/css/site.css
+++ b/src/WebApi/wwwroot/css/site.css
@@ -10,10 +10,10 @@
     color: black;
 }
 
-/*.pagination a:active {
+.pagination a:active {
     color: black;
 }
 
 .pagination a:visited {
     color: black;
-}*/
+}
