--- a/src/WebApi/wwwroot/js/app/components/search/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/search/searchView.html
@@ -76,9 +76,8 @@
                 </tr>
             </thead>
             <tbody data-bind="foreach: posts">
-                <tr>
-                    <!-- <td data-bind="text: id">Post ID</td>      --> 
-                    <td><input id="cbmark" type="checkbox" data-bind="checkedValue: id, checked: status === 1, click: function() { $parent.markPost(id) }"></td>                  
+                <tr> <!-- click: function() {$parent.markPost(id, $index(),$data)},checkedValue : $data, checked:  $parent.checked($data) -->
+                    <td><input id="cbmark" type="checkbox" data-bind="checked: status == 1"></td>                  
                     <td>
                         <a href="#" data-bind="text: title"></a> <br>
                         <span class = "label label-info" data-bind="text: tag"></span>
