--- a/src/WebApi/wwwroot/js/app/components/search/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/search/searchView.html
@@ -77,7 +77,10 @@
             </thead>
             <tbody data-bind="foreach: posts">
                 <tr> <!-- click: function() {$parent.markPost(id, $index(),$data)},checkedValue : $data, checked:  $parent.checked($data) -->
-                    <td><input id="cbmark" type="checkbox" data-bind="checked: status == 1"></td>                  
+                    <td>
+                    
+                    <input id="cbmark" type="checkbox" data-bind="checked: status === 1 ,attr: { id: 'isChecked' + $index() },
+                                                                  click: function() {$parent.markPost(id, $index(),$data)}" ></td>                  
                     <td>
                         <a href="#" data-bind="text: title"></a> <br>
                         <span class = "label label-info" data-bind="text: tag"></span>
