--- a/src/WebApi/wwwroot/js/app/components/history/historyListView.html
+++ b/src/WebApi/wwwroot/js/app/components/history/historyListView.html
@@ -1,39 +1,44 @@
-﻿<table class="table table-striped">
+﻿Jump to page:
+<input data-bind="textInput: page" />
+<button data-bind="click: showJump">Jump</button>
+
+<table class="table table-striped">
     <thead>
         <tr>
 
             <th>total</th>
-            <th>next</th>
             <th>previous</th>
+            <th>next</th>
         </tr>
     </thead>
     <tbody>
         <tr>
 
             <td data-bind ="text: total"></td>
-            <td> <button data-bind="enable: canNext(),click: showNext">Next</button></td>
             <td> <button data-bind="enable: canPrev(), click: showPrev">Previous</button></td>
+            <td> <button data-bind="enable: canNext(),click: showNext">Next</button></td>
         </tr>
     </tbody>
 </table>
-<table>
+<table class="table table-striped">
 
 
     <thead>
-        <tr>
+    <tr>
 
-            <th>Url</th>
-            <th>searchString</th>
-            <th>searchTime</th>
-        </tr>
+            
+        <th>searchString</th>
+        <th>searchTime</th>
+    </tr>
     </thead>
     <tbody data-bind="foreach: hdata">
-        <tr>
+    <tr>
 
-            <td> <a href="#" data-bind="click: $parent.getDetails">Search again</a></td>
-            <td data-bind="text:searchString"></td>
-            <td data-bind="text:searchTime"></td>
-        </tr>
+           
+        <td data-bind="text:searchString"></td>
+        <td data-bind="text:searchTime"></td>
+        <td> <a href="#" data-bind="click: $parent.getDetails">Search again</a></td>
+    </tr>
     </tbody>
 </table>
 
