--- a/src/WebApi/wwwroot/js/app/components/history/historyListView.html
+++ b/src/WebApi/wwwroot/js/app/components/history/historyListView.html
@@ -1,5 +1,6 @@
 ﻿Jump to page:
-<input data-bind="textInput: page" />
+
+<input data-bind="value: page" />
 <button data-bind="click: showJump">Jump</button>
 
 <table class="table table-striped">
