--- a/src/WebApi/wwwroot/js/app/components/history/historyListView.html
+++ b/src/WebApi/wwwroot/js/app/components/history/historyListView.html
@@ -1,57 +1,57 @@
-﻿Jump to page:
+﻿
+<div class="container-fluid">
+    Jump to page:
 
-<input data-bind="value: page" />
+    <input data-bind="value: page" />
 
-<button data-bind="click: showJump">Jump</button>
+    <button data-bind="click: showJump">Jump</button>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
+    <table class="table table-striped">
+        <thead>
+            <tr>
 
-            <th>total</th>
-            <th>previous</th>
-            <th>next</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
+                <th>total</th>
+                <th>previous</th>
+                <th>next</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
 
-            <td data-bind ="text: total"></td>
-            <td> <button data-bind="enable: canPrev(), click: showPrev">Previous</button></td>
-            <td> <button data-bind="enable: canNext(),click: showNext">Next</button></td>
-        </tr>
-    </tbody>
-</table>
-<table class="table table-striped">
-
-
-    <thead>
-    <tr>
-
-            
-        <th>searchString</th>
-        <th>searchTime</th>
-    </tr>
-    </thead>
-    <tbody data-bind="foreach: hdata">
-    <tr>
-
-           
-        <td data-bind="text:searchString"></td>
-        <td data-bind="text:searchTime"></td>
-        <td> <a href="#" data-bind="click: $parent.getDetails">Search again</a></td>
-    </tr>
-    </tbody>
-</table>
+                <td data-bind="text: total"></td>
+                <td> <button data-bind="enable: canPrev(), click: showPrev">Previous</button></td>
+                <td> <button data-bind="enable: canNext(),click: showNext">Next</button></td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-striped">
 
 
+        <thead>
+            <tr>
 
-<div data-bind="foreach: historyDetail">
 
-    <p data-bind="component:{name:'history-detail', params:{link: url, string: searchString, time: searchTime}}"></p>
+                <th>searchString</th>
+                <th>searchTime</th>
+            </tr>
+        </thead>
+        <tbody data-bind="foreach: hdata">
+            <tr>
 
-</div>
-<history-detail></history-detail>
+
+                <td data-bind="text:searchString"></td>
+                <td data-bind="text:searchTime"></td>
+                <td> <a href="#" data-bind="click: $parent.getDetails">Search again</a></td>
+            </tr>
+        </tbody>
+    </table>
+
+
+
+
+
+    </div>
+
 
 
 
