--- a/src/WebApi/wwwroot/js/app/components/search/searchView.html
+++ b/src/WebApi/wwwroot/js/app/components/search/searchView.html
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<div class="container-fluid">
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-4">
