--- a/src/WebApi/wwwroot/js/app/components/annotation/annotationDetailsView.html
+++ b/src/WebApi/wwwroot/js/app/components/annotation/annotationDetailsView.html
@@ -18,7 +18,7 @@
                           class="form-control"
                           id="commentCreationDate"
                           readonly="readonly"
-                          data-bind="textInput: commentCreationDate"
+                          data-bind="textInput: annotationCreationDate"
                           placeholder="CommentCreationDate"></textarea>
             </div>
         </div>
@@ -38,7 +38,7 @@
                 <textarea type="text"
                           class="form-control"
                           id="commentBody"
-                          data-bind="textInput: commentBody"
+                          data-bind="textInput: annotationBody"
                           placeholder="CommentBody">
                  </textarea>
             </div>
