--- a/src/WebApi/wwwroot/js/app/components/annotation/annotationListView.html
+++ b/src/WebApi/wwwroot/js/app/components/annotation/annotationListView.html
@@ -5,7 +5,7 @@
             <li class="list-group-item" data-bind="click: $parent.selectAnnotation, css: {active: $parent.isSelected($data)}">
 
                 <span data-bind="text: postId">PostId</span>
-                <span data-bind="text: commentBody">searchString</span>
+                <span data-bind="text: annotationBody">searchString</span>
             </li>
         </ul>
     </div>
