--- a/src/WebApi/wwwroot/css/site.css
+++ b/src/WebApi/wwwroot/css/site.css
@@ -84,8 +84,7 @@ body
 .popup-box .popup-head .popup-head-right {
     margin: 11px 7px 0;
 }
-.popup-box .popup-messages {
-}
+
 .popup-head-left img {
     border: 1px solid #7b7b7b;
     border-radius: 50%;
@@ -254,10 +253,10 @@ body
     content: "";
     left: 17px;
     margin: 0;
-    position: absolute;
+    /*position: absolute;*/
     top: 0;
     width: 2px;
-	 display: inline;
+	display: inline;
 	  z-index: -2;
 }
 
@@ -268,10 +267,10 @@ body
     content: "";
     left: 17px;
     margin: 0;
-    position: absolute;
+    /*position: absolute;*/
     top: 0;
     width: 2px;
-	 display: inline;
+	 /*display: inline;*/
 	  z-index: -2;
 }
 .direct-chat-text::after, .direct-chat-text::before {
