Final version (cross checked)

--- a/src/WebApi/wwwroot/js/app/components/annotation/annotationDetailsView.html
+++ b/src/WebApi/wwwroot/js/app/components/annotation/annotationDetailsView.html
@@ -58,7 +58,7 @@
                 </button>
                 <button type="submit"
                         class="btn btn-success"
-                        data-bind="click: function() { $parent.deleteAnnotation}">
+                        data-bind="click: function() { $parent.deleteAnnotation()}">
                     Delete
                 </button>
             </div>
